[package]
name = "agent-radio"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "File-backed message bus for coordinating multiple local coding agents sharing a machine or worktree."
repository = "https://github.com/Jcibernet/agent-radio"

[[bin]]
name = "agent-radio"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
